...
private enum class GameLayout {
    VERTICAL,
    HORIZONTAL,
}

internal const val GAME_BACK_TEST_TAG = "game_back"
internal const val GAME_CHESS_BOARD_TEST_TAG = "game_chess_board"
internal const val GAME_CONTENT_TEST_TAG = "game_content"
internal const val GAME_INSTRUCTION_TEST_TAG = "game_instruction"
internal const val GAME_PROGRESS_TEST_TAG = "game_progress"
internal const val GAME_RESET_TEST_TAG = "game_reset"
internal const val GAME_STATUS_TEST_TAG = "game_status"
internal const val GAME_UNDO_TEST_TAG = "game_undo"

private val MAX_BOARD_WIDTH = 560.dp
private val MAX_CONTROLS_WIDTH = 560.dp

